--- a/.gitignore
+++ b/.gitignore
@@ -134,7 +134,7 @@ dmypy.json
 
 # dependencies
 /node_modules
-web/frontend/node_modules/
+/frontend/node_modules/
 
 /.pnp
 .pnp.js
@@ -155,4 +155,3 @@ web/frontend/node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-web/frontend/my-app/node_modules/.bin/ansi-html
