--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,11 @@ yarn-debug.log*
 yarn-error.log*
 throwawaylater/
 .csv
+datasets/fashion-mnist_test.csv
+datasets/fashion-mnist_train.csv
+datasets/t10k-images-idx3-ubyte
+datasets/t10k-labels-idx1-ubyte
+datasets/train-images-idx3-ubyte
+.gitignore
+models/knn.pkl
+datasets/train-labels-idx1-ubyte
